refactor(learner): complete pure Java refactoring, remove Lombok builder calls, fix entity getters, and add testing guides